Bug 1435859 - Fix OOM crash on filenames without extensions. r=gcp, a=RyanVM

Passing a value of -1 to nsCString::Truncate() converts that
value to a large integer and leads to an unnecessary 4GB
memory allocation.

MozReview-Commit-ID: Icm5iUsEgA6

--HG--
extra : source : d418ce8a05644edb16f317c13fc1c8cd2b6c3c2f